[project]
name = "review-steam-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Jojojmo",email = "jmo.nick@outlook.com"}
]
readme = "README.md"
requires-python = "<3.13,>=3.10"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "transformers[torch] (>=4.48.0,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "spacy (>=3.8.4,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "sentence-transformers (>=3.3.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ollama = "^0.4.6"
faiss-cpu = "^1.9.0.post1"

